# irlib-plus

./: .atom-build.json  .clang-format
src/: Block.hpp  BlockExporter.cpp  BlockExporter.h  CMakeLists.txt  CliInputHelper.h  ExpressionType.hpp  ExpressionTypeAnalyzer.cpp  ExpressionTypeAnalyzer.hpp  Parser.cpp  Parser.hpp  ParserException.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
tests/: test.sh
tests/Resources/: irlib.js
tests/TestCases/Test2/: input.xml  output.xml
tests/TestCases/Test3/: input.xml  output.xml
tests/TestCases/Test4/: input.xml  output.xml  variables.js
